# cogment

./: .apache-license-checker.yaml  .clang-format  .clang-tidy  .cogment-api.yaml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yaml  .license.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  Makefile  README.md  build.dockerfile  build_all_no_orchestrator.sh  build_docker.sh  build_environment.dockerfile  build_linux.sh  build_macos.sh  build_windows.bat  cogment.dockerfile  docker-compose.yaml  go.mod  go.sum  go_proto_build.dockerfile  go_protoc.dockerfile  install.sh  local_build.sh  main.cpp  main.go  pkged.go  raw_report.txt  report.xml  tools.go  version.txt
api/: application.go  default_cogment.yaml  docker_registry.go  logs.go  project.go  projectConfig.go  projectConfig_test.go
backend/: backend.go  computeHash.go  filters.go  filters_test.go  memoryBackend.go  memoryBackend_test.go  trialSampleFilter.go  trialSampleFilter_test.go  types.go
backend/boltBackend/: boltBackend.go  boltBackend_test.go
backend/db/: dbBackend.go  dbBackend_test.go
backend/fs/: fsBackend.go  fsBackend_test.go
backend/hybrid/: hybridBackend.go  hybridBackend_test.go  sync.go  sync_test.go
backend/memoryBackend/: filters.go  filters_test.go  memoryBackend.go  memoryBackend_test.go
backend/memoryCache/: memoryCacheBackend.go  memoryCacheBackend_test.go
backend/test/: backendBenchmark.go  backendTestSuite.go
cmd/: build.go  build_test.go  copy.go  delete.go  delete_test.go  deploy.go  deploy_test.go  generate.go  generate_test.go  init.go  init_test.go  inspect.go  inspect_test.go  logs.go  new.go  new_test.go  ps.go  ps_test.go  root.go  run.go  run_test.go  sync.go  version.go
cmd/.snapshots/: TestCreateProjectFiles  TestCreateProjectFiles-.gitignore  TestCreateProjectFiles-README.md  TestCreateProjectFiles-agents-dumb-Dockerfile  TestCreateProjectFiles-agents-dumb-main.py  TestCreateProjectFiles-agents-smart-Dockerfile  TestCreateProjectFiles-client-cog_settings.py  TestCreateProjectFiles-client-data_pb2.py  TestCreateProjectFiles-client-main.py  TestCreateProjectFiles-client-requirements.txt  TestCreateProjectFiles-clients-Dockerfile  TestCreateProjectFiles-clients-main.py  TestCreateProjectFiles-cog_settings.py  TestCreateProjectFiles-cogment.sh  TestCreateProjectFiles-cogment.yaml  TestCreateProjectFiles-configs-grafana-dashboards-dashboard.json  TestCreateProjectFiles-configs-grafana-dashboards-dashboard.yaml  TestCreateProjectFiles-configs-grafana-datasources-datasource.yaml  TestCreateProjectFiles-configs-prometheus-prometheus.yaml  TestCreateProjectFiles-configurator-Dockerfile  TestCreateProjectFiles-configurator-main.py  TestCreateProjectFiles-data.proto  TestCreateProjectFiles-docker-compose.yaml  (+29 more)
compose/: compose.go
deployment/: deployment.go  deployment_test.go  docker.go  rest.go
deprecated_docker_images/: build_deprecated_docker_images.sh  cli.dockerfile  model_registry.dockerfile  orchestrator.dockerfile  trial_datastore.dockerfile
docs/: 2021-02-17-web-client-proposal.md
grpcserver/: server.go  server_test.go
grpcservers/: activityLoggerServer.go  activityLoggerServer_test.go  backendPromise.go  createGrpcServer.go  datalogServer.go  datalogServer_test.go  logExporterServer.go  logExporterServer_test.go  modelRegistryServer.go  modelRegistryServer_test.go  trialDatastoreServer.go  trialDatastoreServer_test.go
helper/: config.go  helper.go  helper_test.go  logger.go  version.go  version_test.go
lib/: CMakeLists.txt
lib/aom/: actor.cpp  actor.h  agent.cpp  agent.h  base64.cpp  config_file.cpp  config_file.h  human.cpp  human.h  orchestrator.cpp  orchestrator.h  orchestrator_old.cpp  orchestrator_old.h  stub_pool.h  trial.cpp  trial.h  trial_old.cpp  trial_old.h  trial_params.cpp  trial_spec.cpp  trial_spec.h  utils.h
lib/aom/datalog/: grpc_exporter.cpp  grpc_exporter.h  storage_interface.cpp  storage_interface.h
lib/aom/services/: actor_service.cpp  actor_service.h  trial_lifecycle_service.cpp  trial_lifecycle_service.h
lib/cogment/: actor.cpp  actor.h  agent.cpp  agent.h  agent_actor.cpp  agent_actor.h  base64.cpp  base64.h  client_actor.cpp  client_actor.h  config_file.cpp  config_file.h  datalog.cpp  datalog.h  directory.cpp  directory.h  environment.cpp  environment.h  human.cpp  human.h  orch_config.h  orch_config.h.in  orchestrator.cpp  orchestrator.h  orchestrator_old.cpp  orchestrator_old.h  reward.h  stub_pool.h  trial.cpp  trial.h  trial_params.cpp  trial_params.h  trial_spec.cpp  trial_spec.h  utils.cpp  utils.h  versions.h.in
lib/cogment/datalog/: grpc_exporter.cpp  grpc_exporter.h  storage_interface.cpp  storage_interface.h
lib/cogment/services/: actor_service.cpp  actor_service.h  trial_lifecycle_service.cpp  trial_lifecycle_service.h
routes/: addModelVersion.go  createRouter.go  createRouter_test.go  getModelVersion.go  helpers.go  listModelVersions.go  listModels.go  notFound.go  welcome.go
scripts/: build_docker.sh  build_macos.sh  commons.sh  create_release_branch.sh  extract_version_changelog.sh  extract_version_changes.sh  generate_protos.sh  launch_orchestrator.sh  tag_release.sh
templates/: .gitignore.tmpl  CogSettings.ts.tmpl  README.md.go  README.md.tmpl  cog_settings.js.go  cog_settings.js.tmpl  cog_settings.py.go  cog_settings.py.tmpl  cogment.sh.tmpl  cogment.yaml.go  cogment.yaml.tmpl  data.proto.go  data.proto.tmpl  docker-compose-override.yaml.go  docker-compose.override.template.yaml.tmpl  docker-compose.yaml.go  docker-compose.yaml.tmpl  gitignore.go  grpcwebproxy.dockerfile.tmpl  js_service.dockerfile.tmpl  orchestrator.dockerfile.tmpl  py_service.dockerfile.tmpl  requirements.txt.tmpl  templates.go  templates_test.go
test/: README.md  cogment.yaml  data.proto  docker-compose.yaml  grpcwebproxy.dockerfile  orchestrator.dockerfile
testdata/: cog_settings.js  cog_settings.py  cogment.yaml  data.proto  docker-compose.yaml  otherdata.proto  somedata.proto
utils/: idFilter.go  observableList.go  observableList_test.go
version/: version.go
(+79 files in other folders)
